# isaac_warehouse_project

./: README.md  capture_config.yaml  capture_scene.py  config.yaml  generate_voxel_map.py  joy_teleop.py  nav2_sim_launcher.py  spawn_warehouse.py
ros2_ws/src/nav2_sandbox/: CMakeLists.txt  package.xml
ros2_ws/src/nav2_sandbox/config/: fastdds_profile.xml  nav2_anymal_params.yaml  nav2_carter_params.yaml  nav2_g1_params.yaml  project_config.yaml  rviz_nav.rviz
ros2_ws/src/nav2_sandbox/config/robots/: anymal.yaml  carter.yaml  g1.yaml
ros2_ws/src/nav2_sandbox/launch/: bringup.launch.py  navigation.launch.py  sensor_bridge.launch.py
ros2_ws/src/nav2_sandbox/maps/: map_auto.yaml  map_raised.pgm  map_raised.yaml  map_raw.pgm  map_raw.yaml  voxel_map.npz
ros2_ws/src/nav2_sandbox/nav2_sandbox/: __init__.py  config_loader.py
ros2_ws/src/nav2_sandbox/nodes/: localization_bridge_node.py
ros2_ws/src/nav2_sandbox/scripts/: joy_teleop.py  launch_tmux.sh  send_goal.py  waypoint_follower.py
