cmake_minimum_required(VERSION 3.8)
project(nav2_sandbox)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install launch files
install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})

# Install config files
install(DIRECTORY config DESTINATION share/${PROJECT_NAME})

# Install maps
install(DIRECTORY maps DESTINATION share/${PROJECT_NAME})

# Install nodes and scripts
install(PROGRAMS
  nodes/localization_bridge_node.py
  scripts/joy_teleop.py
  scripts/send_goal.py
  scripts/waypoint_follower.py
  scripts/launch_tmux.sh
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
